# AlgoArena

./: .gitignore  CMakeLists.txt  README.md  bot_fleet.cpp  deployer.py  docker-compose.yml  dummy_target.py  kafka_consumer.py  kafka_producer.py  package-lock.json  package.json
backend/: package-lock.json  server.js
frontend/: package-lock.json  package.json
frontend/src/: App_backup.js  index.css
